@@ -80,7 +80,7 @@ class RocksDBFulltextIndex final : public RocksDBIndex {
 
   bool canBeDropped() const override { return true; }
 
-  bool isSorted() const override { return true; }
+  bool isSorted() const override { return false; }
 
   bool hasSelectivityEstimate() const override { return false; }
 
