@@ -37,13 +37,14 @@ var findExecutionNodes = helper.findExecutionNodes;
 var findReferencedNodes = helper.findReferencedNodes;
 var getQueryMultiplePlansAndExecutions = helper.getQueryMultiplePlansAndExecutions;
 var removeAlwaysOnClusterRules = helper.removeAlwaysOnClusterRules;
+  
+const ruleName = "use-index-for-sort";
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief test suite
 ////////////////////////////////////////////////////////////////////////////////
 
 function optimizerRuleTestSuite() {
-  const ruleName = "use-index-for-sort";
   const colName = "UnitTestsUseIndexForSort";
   let c;
 
@@ -195,6 +196,48 @@ function optimizerRuleTestSuite() {
   };
 }
 
+function optimizerRuleWithOtherIndexTypesTestSuite() {
+  const cn = "UnitTestsCollection";
+
+  return {
+    setUp : function () {
+      internal.db._drop(cn);
+      internal.db._create(cn, { numberOfShards: 3 });
+    },
+
+    tearDown : function () {
+      internal.db._drop(cn);
+    },
+
+    testFulltextAscending : function () {
+      internal.db[cn].ensureIndex({ type: "fulltext", fields: ["name"] });
+      internal.db[cn].insert([ { name: "Agatha" }, { name: "Agathe" }, { name: "Aardvark" }, { name: "Aaron" }, { name: "Astrid" }, { name: "Ana" }, { name: "Anna" }, { name: "Anne" }, { name: "Ali" } ]);
+      
+      let query = `FOR doc IN FULLTEXT(${cn}, 'name', 'prefix:a') SORT doc.name RETURN doc.name`;
+
+      let rules = AQL_EXPLAIN(query).plan.rules;
+      assertEqual(-1, rules.indexOf(ruleName));
+
+      let results = AQL_EXECUTE(query).json;
+      assertEqual([ "Aardvark", "Aaron", "Agatha", "Agathe", "Ali", "Ana", "Anna", "Anne", "Astrid" ], results);
+    },
+    
+    testFulltextDescending : function () {
+      internal.db[cn].ensureIndex({ type: "fulltext", fields: ["name"] });
+      internal.db[cn].insert([ { name: "Agatha" }, { name: "Agathe" }, { name: "Aardvark" }, { name: "Aaron" }, { name: "Astrid" }, { name: "Ana" }, { name: "Anna" }, { name: "Anne" }, { name: "Ali" } ]);
+      
+      let query = `FOR doc IN FULLTEXT(${cn}, 'name', 'prefix:a') SORT doc.name DESC RETURN doc.name`;
+
+      let rules = AQL_EXPLAIN(query).plan.rules;
+      assertEqual(-1, rules.indexOf(ruleName));
+
+      let results = AQL_EXECUTE(query).json;
+      assertEqual([ "Astrid", "Anne", "Anna", "Ana", "Ali", "Agathe", "Agatha", "Aaron", "Aardvark" ], results);
+    },
+  };
+}
+
 jsunity.run(optimizerRuleTestSuite);
+jsunity.run(optimizerRuleWithOtherIndexTypesTestSuite);
 
 return jsunity.done();
