@@ -1,6 +1,8 @@
 v3.4.9 (XXX-XX-XX)
 -------------------
 
+* Fixed issue #10078: FULLTEXT with sort on same field not working.
+
 * Fixed issue #10062: AQL: Could not extract custom attribute.
 
 * Made the mechanism in the Web UI of replacing and upgrading a foxx app more clear.
